--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <a href="login.html">👉 Click Here to Login</a>  
 <hr>
 <center>
-<img src="C:\Users\akash\Downloads\download.jpg" width="900" alt="Banner Image">
+<img src="https://cdn.vectorstock.com/i/1000v/09/63/online-services-network-lines-vector-17870963.jpg" width="900" alt="Banner Image">
 </center>
 </body>
 </html>
+
